5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4190/executions/1834_2603.log
== SUBMITION (2019-07-09 15:02:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array(eval(input('X: '))

for i in range(x.shape[0]):
	x[:,i]=sorted(x[:,i],reverse=True)
print(x)
-- EXECUTION TIME:
0.719196
-- ERROR:
  File "/home/codebench/codes/1834/2603/main.py", line 6
    for i in range(x.shape[0]):
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 15:02:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array(eval(input('X: '))

for i in range(x.shape[0]):
	x[:,i]=sorted(x[:,i],reverse=True)
print(x)
-- ERROR:
File "XXXX", line 6
    for i in range(x.shape[0]):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 15:02:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array(eval(input('X: '))

for i in range(shape(x)[0]):
	x[:,i]=sorted(x[:,i],reverse=True)
print(x)
-- EXECUTION TIME:
0.657589
-- ERROR:
  File "/home/codebench/codes/1834/2603/main.py", line 6
    for i in range(shape(x)[0]):
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 15:02:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array(eval(input('X: '))

for i in range(shape(x)[0]):
	x[:,i]=sorted(x[:,i],reverse=True)
print(x)
-- ERROR:
File "XXXX", line 6
    for i in range(shape(x)[0]):
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 15:04:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array(eval(input('X: '))

for i in range(shape(x)[0]):
	x[:,i]=sorted(x[:,i],reverse=True)
print(x)
-- EXECUTION TIME:
0.504637
-- ERROR:
  File "/home/codebench/codes/1834/2603/main.py", line 6
    for i in range(shape(x)[0]):
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 15:05:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array(eval(input('X: '))

for i in range(shape(x)[0]):
	x[:,i]=sorted(x[:,i],reverse=True)
print(x)
-- EXECUTION TIME:
0.776496
-- ERROR:
  File "/home/codebench/codes/1834/2603/main.py", line 6
    for i in range(shape(x)[0]):
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 15:05:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array(eval(input('X: '))

for i in range(shape(x)[0]):
	x[:,i]=sorted(x[:,i],reverse=True)
print(x)
-- ERROR:
File "XXXX", line 6
    for i in range(shape(x)[0]):
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 15:05:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array(eval(input('X: '))

for i in range(shape(x)[0]) :
	x[:,i]=sorted(x[:,i],reverse=True)
print(x)
-- ERROR:
File "XXXX", line 6
    for i in range(shape(x)[0]) :
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 15:05:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array(eval(input('X: ')))

for i in range(shape[0]) :
	x[:,i]=sorted(x[:,i],reverse=True)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 15:05:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array(eval(input('X: ')))

for i in range(shape[0]) :
	x[:,i]=sorted(x[:,i],reverse=True)
print(x)
-- EXECUTION TIME:
1.1581
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2603/main.py", line 6, in <module>
    for i in range(shape[0]) :
TypeError: 'function' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 15:06:04) 
-- CODE:
from numpy import*
from numpy.linalg import*

x=array(eval(input('X: ')))

for i in range(x.shape[0]) :
	x[:,i]=sorted(x[:,i],reverse=True)
print(x)
-- EXECUTION TIME:
0.996142
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
